--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_BACKEND_API ="https://lavender-grasshopper-slip.cyclic.app/api"
+# REACT_APP_BACKEND_API ="https://lavender-grasshopper-slip.cyclic.app/api"
 # REACT_APP_BACKEND_API ="http://127.0.0.1:5000/api"
+REACT_APP_BACKEND_API ="http://139.180.132.92/api"
 REACT_APP_CLOUDINARY_CLOUD_NAME ="dserfogzu"
 REACT_APP_CLOUDINARY_UPLOAD_PRESET ="bvdktpt2023"
