--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ REACT_APP_BACKEND_API ="http://127.0.0.1:5000/api"
 # REACT_APP_BACKEND_API ="https://ill-tan-cricket-slip.cyclic.app/api"
 # REACT_APP_BACKEND_API ="https://139.180.132.92/api/"
 REACT_APP_CLOUDINARY_CLOUD_NAME ="dserfogzu"
-REACT_APP_CLOUDINARY_UPLOAD_PRESET ="git"
+REACT_APP_CLOUDINARY_UPLOAD_PRESET ="bvdktpt2023"
+PORT=8080
