--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 
 # REACT_APP_BACKEND_API ="https://ill-tan-cricket-slip.cyclic.app//api"
-REACT_APP_BACKEND_API ="http://127.0.0.1:8020/api"
+# REACT_APP_BACKEND_API ="http://127.0.0.1:8020/api"
 # REACT_APP_BACKEND_API ="http://192.168.5.136:8020/api"
 # REACT_APP_BACKEND_API ="https://ill-tan-cricket-slip.cyclic.app/api"
 # REACT_APP_BACKEND_API ="https://139.180.132.92/api/"
+REACT_APP_BACKEND_API ="http://44.204.72.67:8020/api/"
 REACT_APP_CLOUDINARY_CLOUD_NAME ="dserfogzu"
 REACT_APP_CLOUDINARY_UPLOAD_PRESET ="bvdktpt2023"
 PORT=8080
