--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
+    "react-image-lightbox": "^5.1.4",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
