--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@
 # REACT_APP_BACKEND_API ="https://44.204.72.67:8020/api/"
 REACT_APP_BACKEND_API ="https://api.bvdktphutho.net/api/"
 REACT_APP_CLOUDINARY_CLOUD_NAME ="dserfogzu"
-REACT_APP_CLOUDINARY_UPLOAD_PRESET ="bvdktpt2023"
+# REACT_APP_CLOUDINARY_UPLOAD_PRESET ="bvdktpt2023"
