--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "apexcharts": "^3.46.0",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.30.0",
@@ -25,6 +26,7 @@
     "numeral": "^2.0.6",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
