--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "docxtemplater": "^3.46.0",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "pizzip": "^3.1.6",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
