--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "docxtemplater": "^3.46.0",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -40,6 +41,7 @@
     "react-toastify": "^9.1.3",
     "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "scripts": {
