--- a/package.json
+++ b/package.json
@@ -18,26 +18,40 @@
     "@testing-library/user-event": "^14.4.3",
     "apexcharts": "^3.46.0",
     "axios": "^1.4.0",
+    "chance": "^1.1.11",
     "change-case": "^4.1.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "docxtemplater": "^3.46.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
+    "iconsax-react": "^0.0.8",
+    "immutability-helper": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "match-sorter": "^6.3.4",
     "numeral": "^2.0.6",
     "pizzip": "^3.1.6",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-csv": "^2.2.2",
+    "react-device-detect": "^2.2.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-markdown": "^8.0.7",
+    "react-number-format": "^5.3.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4",
